src/test/deca/syntax/valid/created/testsGeneraux/noOperation.deca
// Description :
//    Test d'un bloc sans opération
//
// Résultats :
//    ok

{
    ;
}