src/test/deca/syntax/invalid/created/ifThenElse/wrongIfCond.deca
// Description :
//    Test invalide : un if sans () pour la cond
//
// Résultats :
//    Erreur Syntaxique
//    Ligne 9: missing '(' at 'ohoh'

{
    if ohoh {

    }
}